blog: interdire l'accès public #877
https://gestion.lachouettecoop.fr/issues/877

--- a/odoo/Dockerfile
+++ b/odoo/Dockerfile
@@ -6,4 +6,7 @@ RUN apt-get update \
         python-ldap \
     && rm -rf /var/lib/apt/lists/*
 
+#Passage du blog en mode authentifié, pour interdire l'accès public:
+RUN sed -i 's/auth="public"/auth="user"/g' /usr/lib/python2.7/dist-packages/openerp/addons/website_blog/controllers/main.py
+
 USER odoo
