persistance de /etc/odoo, ajout d'un script run.sh
Création d'un volume pour /etc/odoo dans data/odoo/etc.
Création d'un script run.sh

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
-docker-compose.yml
-data/postgres/
-data/odoo/files
+/docker-compose.yml
+/data/postgres/
+/data/odoo/files
+/data/odoo/etc/openerp-server.conf
