interdire l'accès non authentifié #877
Version radicale qui interdit beaucoup de choses,
meme les images et le css de la page d'acceuil.
https://gestion.lachouettecoop.fr/issues/877

--- a/data/odoo/etc/openerp-server.conf.dist
+++ b/data/odoo/etc/openerp-server.conf.dist
@@ -2,6 +2,7 @@
 addons_path = /mnt/extra-addons,/usr/lib/python2.7/dist-packages/openerp/addons
 data_dir = /var/lib/odoo
 auto_reload = True
+db_host = False
 ; admin_passwd = admin
 ; csv_internal_sep = ,
 ; db_maxconn = 64
