--- a/odoo/Dockerfile
+++ b/odoo/Dockerfile
@@ -6,7 +6,16 @@ RUN apt-get update \
         python-ldap \
     && rm -rf /var/lib/apt/lists/*
 
-#Passage du blog en mode authentifié, pour interdire l'accès public:
-RUN sed -i 's/auth="public"/auth="user"/g' /usr/lib/python2.7/dist-packages/openerp/addons/website_blog/controllers/main.py
+# Passage en mode authentification obligatoire en remplacant
+#    auth="public" par auth="user"
+# Le premier et le dernier sed doit s'appliquer qu'à la méthode web_login que le module
+# website a redéfinis comme étant "public" au lieu de "none" dans le module web hérité
+# et on ne veut pas passer web_login à auth="user" sinon => boucle de redirection infinie !
+RUN sed -i -e 's/@http.route(website=True, auth="public")/@http.route(website=True, auth="none")/' \
+        /usr/lib/python2.7/dist-packages/openerp/addons/website/controllers/main.py \
+    && sed -i -e 's/auth=['"'"'"]public['"'"'"]/auth="user"/g' \
+        /usr/lib/python2.7/dist-packages/openerp/addons/web*/controllers/main.py \
+    && sed -i -e 's/@http.route(website=True, auth="none")/@http.route(website=True, auth="public")/' \
+        /usr/lib/python2.7/dist-packages/openerp/addons/website/controllers/main.py
 
 USER odoo
