--- a/odoo/Dockerfile
+++ b/odoo/Dockerfile
@@ -4,6 +4,7 @@ USER root
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
         python-ldap \
+        python-pip \
     && rm -rf /var/lib/apt/lists/*
 
 COPY requirements.txt /tmp
