simplejson installed with apt-get instead of pip
Python simplejson need gcc to compile its speedup extension.
Installing it with `apt-get install python-pip` avoid installing gcc
that would be needed with pip installation.

--- a/odoo/Dockerfile
+++ b/odoo/Dockerfile
@@ -3,6 +3,7 @@ FROM odoo:9
 USER root
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
+        python-simplejson \
         python-ldap \
         python-pip \
     && rm -rf /var/lib/apt/lists/*
