--- a/odoo/requirements.txt
+++ b/odoo/requirements.txt
@@ -1,7 +1,7 @@
-# Modules python a instaler avec
-#     pip -r requirements.txt
-
 # Modules python nécessaires pour installer des modules Odoo
+# À instaler avec la commande (qui est exécutée par le Dockerfile)
+#     pip install -r requirements.txt
+
 
 #======================================================================
 # ofxparse
@@ -20,7 +20,7 @@ ofxparse==0.16
 #----------------------------------------------------------------------
 # Déjà installé avec la commande "apt-get python-simplejson" dans le
 # fichier Dockerfile car son installation avec pip nécessiterait
-# d'avoir installé gcc.
+# d'avoir installé le compilateur gcc.
 
 #======================================================================
 # Unidecode
@@ -38,3 +38,56 @@ jcconv==0.2.3
 Python-Chart==1.39
 qrcode==5.3
 suds-jurko==0.6
+
+
+#======================================================================
+# Liste complète de modules python utilisés par La Louve
+# (170406_pip_package_prod)
+# Parmis ceux-ci, seuls nodeenv, pyserial et pyusb
+# ne sont pas installés chez nous.
+#----------------------------------------------------------------------
+# Babel==1.3
+# beautifulsoup4==4.5.1
+# decorator==3.4.0
+# docutils==0.12
+# feedparser==5.1.3
+# gdata==2.0.18
+# gevent==1.0.2
+# greenlet==0.4.7
+# jcconv==0.2.3
+# Jinja2==2.7.3
+# lxml==3.4.1
+# Mako==1.0.1
+# MarkupSafe==0.23
+# mock==1.0.1
+# nodeenv==1.0.0
+# ofxparse==0.14
+# passlib==1.6.2
+# Pillow==2.7.0
+# psutil==2.2.0
+# psycogreen==1.0
+# psycopg2==2.5.4
+# pyBarcode==0.7
+# pydot==1.0.2
+# pyparsing==2.0.3
+# pyPdf==1.13
+# pyserial==2.7
+# Python-Chart==1.39
+# python-dateutil==2.4.0
+# python-ldap==2.4.19
+# python-openid==2.2.5
+# python-stdnum==1.4
+# pytz==2014.10
+# pyusb==1.0.0b2
+# PyYAML==3.11
+# qrcode==5.1
+# reportlab==3.1.44
+# requests==2.6.0
+# simplejson==3.10.0
+# six==1.9.0
+# suds-jurko==0.6
+# Unidecode==0.4.20
+# vatnumber==1.2
+# vobject==0.6.6
+# Werkzeug==0.9.6
+# xlwt==0.7.5
