Change Dockerfile to use AwesomeFoodCoops/odoo
The new Dockerfile links to Dockerfile-LCC-Odoo_AwesomeFoodCoops file.
The builded Docker image does not include Odoo application anymore.
Instead it expect to find Odoo sources from volume /mnt/AwesomeFoodCoops
which should point to the AwesomeFoodCoops submodule.

Also update run.sh script accordingly ("init" and "upgrade" commands)

--- a/docker-compose.yml.dist
+++ b/docker-compose.yml.dist
@@ -4,7 +4,7 @@ data:
     - ./data/postgres:/var/lib/postgresql/data
     - ./data/odoo/etc:/etc/odoo
     - ./data/odoo/files:/var/lib/odoo
-    - ./addons:/mnt/extra-addons
+    - ./addons:/mnt/extra-addons:ro
     - ./AwesomeFoodCoops:/mnt/AwesomeFoodCoops:ro
 
 db:
