--- a/odoo/requirements-lcc.txt
+++ b/odoo/requirements-lcc.txt
@@ -1,5 +1,6 @@
-# Modules python nécessaires pour installer des modules Odoo
-# utilisés par La Chouette Coop
+# Modules python suplémentaires
+# spécifiquement nécessaires pour des modules Odoo 
+# utilisé par La Chouette Coop (LCC)
 #
 # À instaler avec la commande (qui est exécutée par le Dockerfile)
 #     pip install -u -r requirements-lcc.txt
@@ -27,4 +28,3 @@ Unidecode==0.4.20
 #----------------------------------------------------------------------
 pyBarcode==0.7
 qrcode==5.3
-
