--- a/odoo/requirements.txt
+++ b/odoo/requirements.txt
@@ -1,93 +1,41 @@
-# Modules python nécessaires pour installer des modules Odoo
-# À instaler avec la commande (qui est exécutée par le Dockerfile)
-#     pip install -r requirements.txt
-
-
-#======================================================================
-# ofxparse
-#----------------------------------------------------------------------
-# Nécessaire pour le module Odoo "account_bank_statement_import_ofx"
-# https://github.com/shewolfParis/odoo-production/tree/9.0/extra_addons/account_bank_statement_import_ofx
-# La version du module Odoo utilisée par La Louve est un fork du module OCA
-# (https://github.com/OCA/bank-statement-import/tree/9.0/account_bank_statement_import_ofx)
-# modifié par Sylvain LE GAL, notament pour un bug de "," à la place de "." non
-# supporté par la lib python ofxparse version 0.14.
-# Ce bug est logiquement corrigé dans ofxparse version 0.16, on prends donc cette version
-ofxparse==0.16
-
-#======================================================================
-# simplejson
-#----------------------------------------------------------------------
-# Déjà installé avec la commande "apt-get python-simplejson" dans le
-# fichier Dockerfile car son installation avec pip nécessiterait
-# d'avoir installé le compilateur gcc.
-
-#======================================================================
-# Unidecode
-#----------------------------------------------------------------------
-# Nécessaire pour le module Odoo "account_export"
-Unidecode==0.4.20
-
-#======================================================================
-# FIXME: les modules pythons suivant sont
-# nécessaires pour quels modules Odoo ???
-#----------------------------------------------------------------------
-pyBarcode==0.7
-gdata==2.0.18
-jcconv==0.2.3
+Babel==1.3
+Jinja2==2.7.3
+Mako==1.0.1
+MarkupSafe==0.23
+Pillow==2.7.0
 Python-Chart==1.39
-qrcode==5.3
+PyYAML==3.11
+Werkzeug==0.9.6
+argparse==1.2.1
+decorator==3.4.0
+docutils==0.12
+feedparser==5.1.3
+gdata==2.0.18
+gevent==1.0.2
+greenlet==0.4.7
+jcconv==0.2.3
+lxml==3.4.1
+mock==1.0.1
+ofxparse==0.14
+passlib==1.6.2
+psutil==2.2.0
+psycogreen==1.0
+psycopg2==2.7.1
+pyPdf==1.13
+pydot==1.0.2
+pyparsing==2.0.3
+pyserial==2.7
+python-dateutil==2.4.0
+python-ldap==2.4.19
+python-openid==2.2.5
+pytz==2014.10
+pyusb==1.0.0b2
+qrcode==5.1
+reportlab==3.1.44
+requests==2.6.0
+six==1.9.0
 suds-jurko==0.6
-
-
-#======================================================================
-# Liste complète de modules python utilisés par La Louve
-# (170406_pip_package_prod)
-# Parmis ceux-ci, seuls nodeenv, pyserial et pyusb
-# ne sont pas installés chez nous.
-#----------------------------------------------------------------------
-# Babel==1.3
-# beautifulsoup4==4.5.1
-# decorator==3.4.0
-# docutils==0.12
-# feedparser==5.1.3
-# gdata==2.0.18
-# gevent==1.0.2
-# greenlet==0.4.7
-# jcconv==0.2.3
-# Jinja2==2.7.3
-# lxml==3.4.1
-# Mako==1.0.1
-# MarkupSafe==0.23
-# mock==1.0.1
-# nodeenv==1.0.0
-# ofxparse==0.14
-# passlib==1.6.2
-# Pillow==2.7.0
-# psutil==2.2.0
-# psycogreen==1.0
-# psycopg2==2.5.4
-# pyBarcode==0.7
-# pydot==1.0.2
-# pyparsing==2.0.3
-# pyPdf==1.13
-# pyserial==2.7
-# Python-Chart==1.39
-# python-dateutil==2.4.0
-# python-ldap==2.4.19
-# python-openid==2.2.5
-# python-stdnum==1.4
-# pytz==2014.10
-# pyusb==1.0.0b2
-# PyYAML==3.11
-# qrcode==5.1
-# reportlab==3.1.44
-# requests==2.6.0
-# simplejson==3.10.0
-# six==1.9.0
-# suds-jurko==0.6
-# Unidecode==0.4.20
-# vatnumber==1.2
-# vobject==0.6.6
-# Werkzeug==0.9.6
-# xlwt==0.7.5
+vatnumber==1.2
+vobject==0.6.6
+wsgiref==0.1.2
+xlwt==0.7.5
