Add auto_backup OCA addon

--- a/odoo/requirements-lcc.txt
+++ b/odoo/requirements-lcc.txt
@@ -28,3 +28,8 @@ Unidecode==0.4.20
 #----------------------------------------------------------------------
 pyBarcode==0.7
 qrcode==5.3
+
+#======================================================================
+# pysftp nécessaire pour le module OCA "auto_backup"
+#----------------------------------------------------------------------
+pysftp
