Include optimization from chouette-docker-odoo project
Signed-off-by: Vincent Bisserie <vbisserie@gmail.com>

--- a/odoo/requirements-lcc.txt
+++ b/odoo/requirements-lcc.txt
@@ -26,10 +26,10 @@ Unidecode==0.4.20
 #======================================================================
 # Barcode, QRCode
 #----------------------------------------------------------------------
-pyBarcode==0.7
+pyBarcode==0.8b1
 qrcode==5.3
 
 #======================================================================
 # pysftp nécessaire pour le module OCA "auto_backup"
 #----------------------------------------------------------------------
-pysftp
+pysftp==0.2.9
