--- a/odoo/Dockerfile-LCC-Odoo_AwesomeFoodCoops
+++ b/odoo/Dockerfile-LCC-Odoo_AwesomeFoodCoops
@@ -1,71 +1,61 @@
-# Modification of the official Odoo 9.0 Dockerfile
-# (https://github.com/odoo/docker/blob/master/9.0/Dockerfile)
-# - to use mounted sources from AwesomeFoodCoops instead of
-#   installing Odoo nightly deb package.
-
 FROM debian:jessie
 MAINTAINER La Chouette Coop
 
-# Install some deps, lessc and less-plugin-clean-css, and wkhtmltopdf
+ENV APT_DEPS='python-dev build-essential libxml2-dev libxslt1-dev libjpeg-dev libfreetype6-dev \
+              liblcms2-dev libopenjpeg-dev libtiff5-dev tk-dev tcl-dev linux-headers-amd64 \
+              libpq-dev libldap2-dev libsasl2-dev' \
+    LANG=C.UTF-8 \
+    LC_ALL=C.UTF-8 \
+    PGDATABASE=odoo
+
+COPY ./requirements-lcc.txt /tmp/
+
 RUN set -x; \
-        apt-get update \
-        && apt-get install -y --no-install-recommends \
+        sed -Ei 's@(^deb http://deb.debian.org/debian jessie-updates main$)@#\1@' /etc/apt/sources.list &&\
+        apt-get update &&\
+        apt-get install -y --no-install-recommends \
             ca-certificates \
             curl \
+            fontconfig \
+            git \
+            libjpeg62-turbo \
+            libtiff5 \
+            libx11-6 \
+            libxcb1 \
+            libxext6 \
+            libxml2 \
+            libxrender1 \
+            libxslt1.1 \
             node-less \
             python-gevent \
-            python-pip \
+            python-ldap \
+            python-qrcode \
             python-renderpm \
             python-support \
+            python-vobject \
             python-watchdog \
-        && curl -o wkhtmltox.deb -SL http://nightly.odoo.com/extra/wkhtmltox-0.12.1.2_linux-jessie-amd64.deb \
-        && echo '40e8b906de658a2221b15e4e8cd82565a47d7ee8 wkhtmltox.deb' | sha1sum -c - \
-        && dpkg --force-depends -i wkhtmltox.deb \
-        && pip install --upgrade setuptools \
-        && apt-get -y install -f --no-install-recommends \
-        && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false -o APT::AutoRemove::SuggestsImportant=false npm \
-        && rm -rf /var/lib/apt/lists/* wkhtmltox.deb \
-        && pip install psycogreen==1.0
+            sudo \
+            xfonts-75dpi \
+            xfonts-base \
+            && \
+        echo 'deb http://apt.postgresql.org/pub/repos/apt/ jessie-pgdg main' >> /etc/apt/sources.list.d/postgresql.list &&\
+        curl -SL https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add - &&\
+        curl -o wkhtmltox.deb -SL https://github.com/wkhtmltopdf/wkhtmltopdf/releases/download/0.12.5/wkhtmltox_0.12.5-1.jessie_amd64.deb &&\
+        echo '4d104ff338dc2d2083457b3b1e9baab8ddf14202 wkhtmltox.deb' | sha1sum -c - &&\
+        apt-get update &&\
+        dpkg --install wkhtmltox.deb &&\
+        apt-get install -y --no-install-recommends postgresql-client &&\
+        apt-get install -y --no-install-recommends ${APT_DEPS} &&\
+        curl https://bootstrap.pypa.io/2.7/get-pip.py | python /dev/stdin &&\
+        pip install -I -r https://raw.githubusercontent.com/OCA/OCB/9.0/requirements.txt &&\
+        pip install -I -r /tmp/requirements-lcc.txt &&\
+        pip install simplejson WTForms &&\
+        apt-get -y purge ${APT_DEPS} &&\
+        apt-get -y autoremove &&\
+        rm -rf /var/lib/apt/lists/* wkhtmltox.deb /tmp/requirements-lcc.txt
 
 COPY ./openerp-server.conf /etc/odoo/
-COPY ./entrypoint.sh debian/control debian/postinst requirements.txt requirements-lcc.txt /
-
-# Install dependencies required for Odoo and its configuration
-RUN set -x; \
-        apt-get update \
-        # install packages listed in "Depends:" section of Odoo debian "control" file:
-        && (awk '/^Depends:$/{flag=1;next}/^[^ ]/{flag=0}flag' control | tr , " " |grep -v '\${' | xargs apt-get install -y --no-install-recommends) \
-        # install other Odoo dependencies
-        # - python packages for wich debian version satisfies Odoo requirements, like gdata, pychart
-        # - dependencies for some Odoo addons we use (like ldap)
-        # - "build" and "dev" packages required later to build other python requirements using "pip install"
-        && apt-get install -y --no-install-recommends \
-            python-simplejson \
-            postgresql \
-            python-gdata \
-            python-pychart \
-            libxml2  libldap-2.4-2 libsasl2-2 \
-            libopenjpeg5 libtiffxx5 libfreetype6 \
-            python-dev build-essential file \
-            libxml2-dev libxslt-dev libldap2-dev libsasl2-dev libpq-dev \
-            libjpeg-dev libopenjpeg-dev libtiff-dev libfreetype6-dev libwebp-dev liblcms2-dev \
-            # libffi-dev required for pysftp python module:
-            libffi-dev \
-        # filter requirements.txt to comment out items also presents in requirements-lcc.txt
-        && (for name in `awk -F== '/^[a-zA-Z]/ {print $1}' requirements-lcc.txt`; do sed -i -e 's/^'${name}'==/#'${name}'==/' requirements.txt; done) \
-        # install python packages listed in requirements.txt or requirements-lcc.txt 
-        # except "requests" package that breaks pip
-        && (cat requirements.txt requirements-lcc.txt | sed -e 's/^requests=/#requests=/' > requirements-combined.txt) \
-        && pip install -U -r /requirements-combined.txt \
-        # purge debian packages that where only needed to build python packages with "pip install"
-        && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
-            -o APT::AutoRemove::SuggestsImportant=false \
-            build-essential \
-            libc6-dev libc-dev gcc g++ make dpkg-dev \
-            libxml2-dev libxslt-dev libldap2-dev libsasl2-dev libpq-dev \
-            libjpeg-dev libopenjpeg-dev libtiff-dev libfreetype6-dev libwebp-dev liblcms2-dev \
-            python-dev \
-        && rm -rf /var/lib/apt/lists/*
+COPY ./entrypoint.sh debian/control debian/postinst /
 
 # Odoo configuration:
 RUN chmod +x /postinst \
