--- a/odoo/Dockerfile-LCC-Odoo_AwesomeFoodCoops
+++ b/odoo/Dockerfile-LCC-Odoo_AwesomeFoodCoops
@@ -1,76 +1,86 @@
-FROM debian:jessie
+FROM debian:stretch
 MAINTAINER La Chouette Coop
 
-ENV APT_DEPS='python-dev build-essential libxml2-dev libxslt1-dev libjpeg-dev libfreetype6-dev \
-              liblcms2-dev libopenjpeg-dev libtiff5-dev tk-dev tcl-dev linux-headers-amd64 \
-              libpq-dev libldap2-dev libsasl2-dev' \
+ENV APT_DEPS='build-essential \
+              libjpeg-dev \
+              libfreetype6-dev \
+              liblcms2-dev \
+              libldap2-dev \
+              libopenjp2-7-dev \
+              libpq-dev \
+              libsasl2-dev \
+              libtiff5-dev \
+              libxml2-dev \
+              libxslt1-dev \
+              linux-headers-amd64 \
+              python-dev \
+              tcl-dev \
+              tk-dev' \
     LANG=C.UTF-8 \
     LC_ALL=C.UTF-8 \
     PGDATABASE=odoo
 
 COPY ./requirements-lcc.txt /tmp/
 
-RUN set -x; \
-        sed -Ei 's@(^deb http://deb.debian.org/debian jessie-updates main$)@#\1@' /etc/apt/sources.list &&\
-        apt-get update &&\
-        apt-get install -y --no-install-recommends \
-            apt-transport-https \
-            ca-certificates \
-            curl \
-            fontconfig \
-            git \
-            libjpeg62-turbo \
-            libtiff5 \
-            libx11-6 \
-            libxcb1 \
-            libxext6 \
-            libxml2 \
-            libxrender1 \
-            libxslt1.1 \
-            node-less \
-            python-gevent \
-            python-ldap \
-            python-qrcode \
-            python-renderpm \
-            python-support \
-            python-vobject \
-            python-watchdog \
-            sudo \
-            xfonts-75dpi \
-            xfonts-base \
-            && \
-        curl -SL https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add - &&\
-        curl -o wkhtmltox.deb -SL https://github.com/wkhtmltopdf/wkhtmltopdf/releases/download/0.12.5/wkhtmltox_0.12.5-1.jessie_amd64.deb &&\
-        echo '4d104ff338dc2d2083457b3b1e9baab8ddf14202 wkhtmltox.deb' | sha1sum -c - &&\
-        echo 'deb https://apt-archive.postgresql.org/pub/repos/apt/ jessie-pgdg main' >> /etc/apt/sources.list.d/postgresql.list &&\
-        apt-get update &&\
-        dpkg --install wkhtmltox.deb &&\
-        apt-get install -y --no-install-recommends postgresql-client &&\
-        apt-get install -y --no-install-recommends ${APT_DEPS} &&\
-        curl https://bootstrap.pypa.io/pip/2.7/get-pip.py | python /dev/stdin &&\
-        pip install -I -r https://raw.githubusercontent.com/OCA/OCB/9.0/requirements.txt &&\
-        pip install -I -r /tmp/requirements-lcc.txt &&\
-        pip install simplejson WTForms &&\
-        apt-get -y purge ${APT_DEPS} &&\
-        apt-get -y autoremove &&\
-        rm -rf /var/lib/apt/lists/* wkhtmltox.deb /tmp/requirements-lcc.txt
+RUN sed -Ei 's@(^deb http://deb.debian.org/debian stretch-updates main$)@#\1@' /etc/apt/sources.list &&\
+    apt-get update &&\
+    apt-get install -y --no-install-recommends \
+        apt-transport-https \
+        ca-certificates \
+        curl \
+        fontconfig \
+        git \
+        gnupg \
+        libjpeg62-turbo \
+        libopenjp2-7 \
+        libtiff5 \
+        libx11-6 \
+        libxcb1 \
+        libxext6 \
+        libxml2 \
+        libxrender1 \
+        libxslt1.1 \
+        node-less \
+        python-gevent \
+        python-ldap \
+        python-qrcode \
+        python-renderpm \
+        python-vobject \
+        python-watchdog \
+        sudo \
+        xfonts-75dpi \
+        xfonts-base \
+        && \
+    curl https://www.postgresql.org/media/keys/ACCC4CF8.asc | gpg --dearmor | tee /etc/apt/trusted.gpg.d/apt.postgresql.org.gpg >/dev/null &&\
+    curl -o wkhtmltox.deb -SL https://github.com/wkhtmltopdf/wkhtmltopdf/releases/download/0.12.5/wkhtmltox_0.12.5-1.stretch_amd64.deb &&\
+    echo '7e35a63f9db14f93ec7feeb0fce76b30c08f2057 wkhtmltox.deb' | sha1sum -c - &&\
+    echo "deb http://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list &&\
+    dpkg --install wkhtmltox.deb &&\
+    apt-get install -y --no-install-recommends ${APT_DEPS} &&\
+    apt-get install -y --no-install-recommends postgresql-client-9.6 &&\
+    curl https://bootstrap.pypa.io/pip/2.7/get-pip.py | python /dev/stdin &&\
+    pip install -I -r https://raw.githubusercontent.com/OCA/OCB/9.0/requirements.txt &&\
+    pip install -I -r /tmp/requirements-lcc.txt &&\
+    apt-get -y purge ${APT_DEPS} &&\
+    apt-get -y autoremove &&\
+    rm -rf /var/lib/apt/lists/* wkhtmltox.deb /tmp/requirements-lcc.txt
 
 COPY ./openerp-server.conf /etc/odoo/
 COPY ./entrypoint.sh debian/control debian/postinst /
 
 # Odoo configuration:
-RUN chmod +x /postinst \
-        # "sync" needed to avoid random "Text file busy" error when trying to execute the file just after chmod:
-        && sync \
-        && /postinst configure \
-        && chown odoo /etc/odoo/openerp-server.conf \
-        # Reference Odoo installation and addons from mounted Docker volumes:
-        && mkdir -p /mnt/extra-addons \
-        && chown -R odoo /mnt/extra-addons \
-        && mkdir -p /mnt/AwesomeFoodCoops/odoo \
-        && ln -s /mnt/AwesomeFoodCoops/odoo /usr/lib/python2.7/dist-packages/openerp \
-        && ln -s /mnt/AwesomeFoodCoops/odoo/openerp-server /usr/local/bin/openerp-server \
-        && ln -s /mnt/AwesomeFoodCoops/odoo/openerp-gevent /usr/local/bin/openerp-gevent
+RUN chmod +x /postinst &&\
+    # "sync" needed to avoid random "Text file busy" error when trying to execute the file just after chmod:
+    sync &&\
+    /postinst configure &&\
+    chown odoo /etc/odoo/openerp-server.conf &&\
+    # Reference Odoo installation and addons from mounted Docker volumes:
+    mkdir -p /mnt/extra-addons &&\
+    chown -R odoo /mnt/extra-addons &&\
+    mkdir -p /mnt/AwesomeFoodCoops/odoo &&\
+    ln -s /mnt/AwesomeFoodCoops/odoo /usr/lib/python2.7/dist-packages/openerp &&\
+    ln -s /mnt/AwesomeFoodCoops/odoo/openerp-server /usr/local/bin/openerp-server &&\
+    ln -s /mnt/AwesomeFoodCoops/odoo/openerp-gevent /usr/local/bin/openerp-gevent
 
 VOLUME ["/var/lib/odoo", "/mnt/extra-addons", "/mnt/AwesomeFoodCoops"]
 
